force-app/main/default/objects/News__c/News__c.object-meta.xml
<CustomObject>
    <label>7S News</label>
    <nameField>
        <label>News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>