force-app/main/default/objects/News__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipName>News</relationshipName>
    <type>Lookup</type>
</CustomField>