force-app/main/default/objects/News__c/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <label>GroupId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>