force-app/main/default/objects/News__c/fields/Like_Count__c.field-meta.xml
<CustomField>
    <fullName>Like_Count__c</fullName>
    <label>Like Count</label>
    <summaryForeignKey>News_Like__c.News__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>