force-app/main/default/objects/News__c/fields/NetworkId__c.field-meta.xml
<CustomField>
    <fullName>NetworkId__c</fullName>
    <inlineHelpText>Enter the community network ID</inlineHelpText>
    <label>NetworkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>