force-app/main/default/objects/News__c/fields/Show_Author__c.field-meta.xml
<CustomField>
    <fullName>Show_Author__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Author</label>
    <type>Checkbox</type>
</CustomField>