force-app/main/default/objects/News__c/listViews/Marketing_Posts.listView-meta.xml
<ListView>
    <fullName>Marketing_Posts</fullName>
    <columns>NAME</columns>
    <columns>Publish_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GroupId__c</field>
        <operation>equals</operation>
        <value>0F91E000000TdPISA0</value>
    </filters>
    <label>Marketing Posts</label>
    <language>en_US</language>
</ListView>