force-app/main/default/objects/News__c/listViews/My_Posts.listView-meta.xml
<ListView>
    <fullName>My_Posts</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Author__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Publish_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Author__c</field>
        <operation>equals</operation>
        <value>Staci Salazar</value>
    </filters>
    <label>My Posts</label>
    <language>en_US</language>
</ListView>