force-app/main/default/objects/News__c/listViews/Paul_s_Blogs.listView-meta.xml
<ListView>
    <fullName>Paul_s_Blogs</fullName>
    <columns>NAME</columns>
    <columns>Publish_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Author__c</field>
        <operation>contains</operation>
        <value>Stillmank</value>
    </filters>
    <label>Paul&apos;s Blogs</label>
    <language>en_US</language>
</ListView>